edit vercel  file

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 { "version": 2,
 "builds": [{"src":"./src/server.js", "use":"@vercel/node"}],
- "routes": [{ "src": "/src/(.*)", "dest": "/api" }]
+ "routes": [{ "src": "/(.*)", "dest": "./src/routes" }]
 }
